absolute -> fixed (so it will stay visible while scrolling)

--- a/css/jquery.feedback_me.rtl.css
+++ b/css/jquery.feedback_me.rtl.css
@@ -11,7 +11,7 @@
 #feedback_trigger{
 	width: 40px;
 	height: 100px;
-	position: absolute;
+	position: fixed;
 	top: 100px;
 	right: 0;
 	cursor: pointer;
@@ -26,7 +26,7 @@
 #feedback_content {
 	width: 380px;
 	height: 300px;
-	position: absolute;
+	position: fixed;
 	top: 50px;
 	right: 0;
 }
